--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "nodemon": "^2.0.22",
+    "react-router-dom": "^6.11.1",
     "rsdi": "^2.3.0"
   }
 }
