--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.3",
     "nodemon": "^2.0.22",
     "react-router-dom": "^6.11.1",
-    "rsdi": "^2.3.0"
+    "rsdi": "^2.3.0",
+    "serve-index": "^1.9.1"
   }
 }
